Fixed alignemnt breaking issues

--- a/resident-ui/src/app/feature/uinservices/personalisedcard/personalisedcard.component.css
+++ b/resident-ui/src/app/feature/uinservices/personalisedcard/personalisedcard.component.css
@@ -5,7 +5,7 @@
 }
 
 .seleted-details-card {
-    min-height: 400px;
+    min-height: 210px;
     width: 100%;
     border: 1px solid #505050;
     border-radius: 6px;
