--- a/resident-ui/src/app/feature/uinservices/sharewithpartner/sharewithpartner.component.css
+++ b/resident-ui/src/app/feature/uinservices/sharewithpartner/sharewithpartner.component.css
@@ -90,7 +90,7 @@
 }
 
 .attribute-card{
-  min-height: 400px;
+  min-height: 210px;
   border: 1px solid #505050; 
   border-radius: 6px; 
   padding: 12px;
